代码未做修改，只增加一些注释

--- a/blogParent/blog-api/pom.xml
+++ b/blogParent/blog-api/pom.xml
@@ -105,10 +105,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <!--登录密码进行MD5加密时使用-->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <!--JWT 生成token的工具使用-->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
