--- a/blogParent/blog-api/pom.xml
+++ b/blogParent/blog-api/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>[7.7.0, 7.7.99]</version>
+        </dependency>
 
     </dependencies>
 
