--- a/blogParent/blog-api/src/main/resources/application.properties
+++ b/blogParent/blog-api/src/main/resources/application.properties
@@ -13,5 +13,13 @@ mybatis-plus.global-config.db-config.table-prefix=ms_
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+# 上传文件总的最大值
+spring.servlet.multipart.max-request-size=20MB
+# 单个文件的最大值
+spring.servlet.multipart.max-file-size=2MB
+qiniu.accessKey=O_pYiNbmSnSotnv-TKuSfcwA7OshdJNssUEjvFWQ
+qiniu.accessSecretKey=PRwcQWJ2s1jxZ3RHTYEvyDGY4m0QmqMCLwBmU_2h
+
         
 
