七牛云服务器需要自己创建一个存储空间，使用自己的测试域名

--- a/blogParent/blog-api/src/main/resources/application.properties
+++ b/blogParent/blog-api/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.redis.port=6379
 spring.servlet.multipart.max-request-size=20MB
 # 单个文件的最大值
 spring.servlet.multipart.max-file-size=2MB
+#登录七牛云后自己创建一个密钥管理
 qiniu.accessKey=O_pYiNbmSnSotnv-TKuSfcwA7OshdJNssUEjvFWQ
 qiniu.accessSecretKey=PRwcQWJ2s1jxZ3RHTYEvyDGY4m0QmqMCLwBmU_2h
 
