--- a/blogParent/blog-api/pom.xml
+++ b/blogParent/blog-api/pom.xml
@@ -132,6 +132,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!--shardingsphere集成到springboot-->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
+            <version>5.0.0-alpha</version>
+        </dependency>
     </dependencies>
 
 </project>
