--- a/blogParent/blog-api/src/main/resources/application.properties
+++ b/blogParent/blog-api/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.datasource.url=jdbc:oracle:thin:@192.168.88.3:1521/orcl
+#spring.datasource.username=itheima
+#spring.datasource.password=itheima
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
 #mybatis-plus
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis-plus.global-config.db-config.table-prefix=ms_
@@ -21,6 +26,54 @@ spring.servlet.multipart.max-file-size=2MB
 #登录七牛云后自己创建一个密钥管理
 qiniu.accessKey=O_pYiNbmSnSotnv-TKuSfcwA7OshdJNssUEjvFWQ
 qiniu.accessSecretKey=PRwcQWJ2s1jxZ3RHTYEvyDGY4m0QmqMCLwBmU_2h
+
+
+#shardingsphere的配置
+#读写分离
+# 通用的配置
+spring.shardingsphere.datasource.common.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.common.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.common.username=root
+spring.shardingsphere.datasource.common.password= root
+
+## 配置一主两从 这儿的master名字必须跟下面的master一致
+spring.shardingsphere.datasource.names=master,slave0,slave1
+
+# 配置第一个数据源
+spring.shardingsphere.datasource.master.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.master.jdbc-url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=UTC
+spring.shardingsphere.datasource.master.username=root
+spring.shardingsphere.datasource.master.password=root
+
+# 配置第二个数据源
+spring.shardingsphere.datasource.slave0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.slave0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.slave0.jdbc-url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=UTC
+spring.shardingsphere.datasource.slave0.username=root
+spring.shardingsphere.datasource.slave0.password=root
+# 配置第三个数据源
+spring.shardingsphere.datasource.slave1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.slave1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.slave1.jdbc-url=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=UTC
+spring.shardingsphere.datasource.slave1.username=root
+spring.shardingsphere.datasource.slave1.password=root
+
+# 主数据源名称
+spring.shardingsphere.rules.replica-query.data-sources.ms.primary-data-source-name=master
+# 从数据源名称，多个数据源名称用逗号隔开
+spring.shardingsphere.rules.replica-query.data-sources.ms.replica-data-source-names=slave0,slave1 
+# 负载均衡算法名称
+spring.shardingsphere.rules.replica-query.data-sources.ms.load-balancer-name=round-robin
+
+## 负载均衡算法配置
+spring.shardingsphere.rules.replica-query.load-balancers.round-robin.type=ROUND_ROBIN
+## 负载均衡算法属性配置
+spring.shardingsphere.rules.replica-query.load-balancers.round-robin.props.workId=1
+# 打印sql
+spring.shardingsphere.props.sql-show=true
+
+
 
         
 
