shardingsphere实现分表,只需要配置文件修改即可

--- a/blogParent/blog-api/src/main/resources/application.properties
+++ b/blogParent/blog-api/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mybatis-plus
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis-plus.global-config.db-config.table-prefix=ms_
+#mybatis-plus.global-config.db-config.table-prefix=ms_
 
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -72,6 +72,28 @@ spring.shardingsphere.rules.replica-query.load-balancers.round-robin.type=ROUND_
 spring.shardingsphere.rules.replica-query.load-balancers.round-robin.props.workId=1
 # 打印sql
 spring.shardingsphere.props.sql-show=true
+
+## 分表
+spring.shardingsphere.rules.sharding.binding-tables=user
+# 标准分片表配置
+# 由数据源+表名组成，以小数点分割，多个表以逗号分割，支持inline表达式，
+spring.shardingsphere.rules.sharding.tables.user.actual-data-nodes=ms.user_$->{0..2}
+
+# 用于单分片表键的标准分片场景
+# 分片列名称
+spring.shardingsphere.rules.sharding.tables.user.table-strategy.standard.sharding-column=id
+# 分片算法名称
+spring.shardingsphere.rules.sharding.tables.user.table-strategy.standard.sharding-algorithm-name=table-inline
+
+#雪花算法，分布式id
+spring.shardingsphere.rules.sharding.key-generators.snowflake.type=SNOWFLAKE
+spring.shardingsphere.rules.sharding.key-generators.snowflake.props.worker-id=123
+
+spring.shardingsphere.rules.sharding.sharding-algorithms.table-inline.type=INLINE
+#除尽3的存user_01表，余1寸user_02表，余2寸user_03表
+spring.shardingsphere.rules.sharding.sharding-algorithms.table-inline.props.algorithm-expression=user_$->{id % 3}
+#开启配置
+spring.shardingsphere.enabled=true
 
 
 
